# GUVA-S12D_nRF52840-DK_UV_Index_Meter_BLE_Beacon

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay  nrf9160dk_nrf9160_ns.overlay
src/: GUVA_S12SD.c  GUVA_S12SD.h  beacon.c  beacon.h  main.c
